--- a/style.css
+++ b/style.css
@@ -41,3 +41,11 @@ body{
     border-bottom: 6px solid var(--borda);
     margin-top: 80px;
 }
+
+#campo-senha{
+    background-color: var(--fundo-senha);
+    border: none;
+    color: var(--branco);
+    font-size: 40px;
+    font-family: var(--roboto-mono);
+}
