--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ body{
     font-size: 40px;
     font-family: var(--roboto-mono);
 }
+
+#campo-senha-focus{
+    outline: none;
+}
+
+.conteudo{
+    max-width: 120px;
+    margin: 0 auto;
+}
