--- a/style.css
+++ b/style.css
@@ -88,5 +88,7 @@ body {
 }
 
 @media screen and (min-width: 768px){
-    .parametro-coluna-senha
+    .parametro-coluna__senha{
+        flex-direction: row;
+    }
 }
